test_src/compiler_errors/types/arithmetic/ModDoubleError3.b
class ModDoubleError3 {
    void test() {
        println(1.0 % 2.0);
    }
}
